--- a/app/assets/stylesheets/public/homes/top.scss
+++ b/app/assets/stylesheets/public/homes/top.scss
@@ -40,6 +40,25 @@
       border-radius: 10px;
     }
   }
+  .notice-box {
+    text-align: left;
+    background-color: #f9f9f9;
+    border-left: 5px solid #ff8c00;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  }
+  
+  .notice-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .notice-date {
+    font-weight: bold;
+    margin-right: 0.5rem;
+  }
   .owners-container {
     display: flex;
     align-items: stretch;
@@ -149,7 +168,7 @@
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   background-image: url('enjoy_music.jpg');
-  height: 200px;
+  height: 70px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
