--- a/app/views/public/events/_song_fields.html.haml
+++ b/app/views/public/events/_song_fields.html.haml
@@ -13,5 +13,8 @@
         .field
           = render 'public/events/join_part_fields', f: join_part
       .links
-        = link_to_add_association 'パートを追加',f ,:join_parts ,{ class: 'btn btn-success js-add-join-part-field-btn' }
+        = link_to_add_association 'パートを追加', f, :join_parts,
+          class: 'btn btn-success js-add-join-part-field-btn',
+          data: { 'turbolinks': false }
+
 
