--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,6 +16,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     %script{:type => "text/javascript", :src => "//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"}
+    %script{:type => "text/javascript", :src => "https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"}
   %body
     .notifications
       - flash.each do |key, value|
