[events]インジケーターの位置修正2

--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -485,9 +485,12 @@
       cursor: pointer;
       transition: background-color 1s;
     }
+    .responsive-wrapper {
+      position: relative;
+    }
     .scroll-indicator {
-      position: fixed;
-      right: 8px;
+      position: absolute;
+      right: 0;
       top: 50%;
       transform: translateY(-50%);
       font-size: 3rem;
