イベント新規作成の不具合修正

--- a/app/assets/stylesheets/public/homes/top.scss
+++ b/app/assets/stylesheets/public/homes/top.scss
@@ -53,6 +53,9 @@
     transition: opacity .25s ease;
     .images{
       width: 100%;
+      aspect-ratio: 16/9;
+      height: auto;
+      object-fit: cover;
       border-radius: 10px;
     }
   }
