--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -51,6 +51,8 @@
                 .mt-2
                   = link_to 'イベントの編集', edit_public_event_path(@event, community_id: @event.community_id), data: { 'turbolinks': false }, class: "btn btn-sm btn-info event-show-btn"
                   = link_to 'イベントの削除', public_event_path(@event), method: :delete, data: { 'turbolinks': false, confirm: 'こちらのイベントを削除します。よろしいですか？' }, class: "btn btn-sm btn-danger event-show-btn"
+                  - if current_customer.can_edit_event?(@event)
+                    = link_to "コピーして新規作成", copy_public_event_path(@event), class: "btn btn-sm btn-info event-show-btn"
                   %hr
                   = link_to '参加する🎵', '#event-songs', data: { 'turbolinks': false }, class: "btn btn-sm btn-info event-show-btn"
                   = link_to 'リクエストする🎵', '#event-request', data: { 'turbolinks': false }, class: "btn btn-sm btn-info event-show-btn"
